feat: :sparkles: Add input class, animate sprite, set horizontal movement

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <canvas id="gameScreen"></canvas>
+    <img class="load-immages" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
 </body>
 </html>
