feat: :sparkles: add monster sprite and soundù

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
     <canvas id="gameScreen"></canvas>
     <img class="load-immages" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
+    <img class="load-immages" id="monster" src="./assets/monster-spritesheet.png" alt="monster-spritesheet">
 </body>
 </html>
