--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <canvas id="gameScreen"></canvas>
     <img class="load-immages" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
-    <img class="load-immages" id="monster" src="./assets/monster-spritesheet.png" alt="monster-spritesheet">
+    <img class="load-immages" id="player2" src="./assets/char-spritesheet-matita.png" alt="char-spritesheet">
+    <img class="load-immages" id="monster" src="./assets/monster-spritesheet.png" alt="monster -spritesheet">
 </body>
-</html>
+</html>       
