--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <canvas id="gameScreen"></canvas>
     <img class="load-immages" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
     <img class="load-immages" id="player2" src="./assets/char-spritesheet-matita.png" alt="char-spritesheet">
-    <img class="load-immages" id="monster" src="./assets/monster-spritesheet.png" alt="monster -spritesheet">
+    <img class="load-immages" id="monster" src="./assets/monster-spritesheet.png" alt="monster-spritesheet">
+    <img class="load-immages" id="layer-1" src="./assets/layer-1.png" alt="layer-1">
+    <img class="load-immages" id="layer-2" src="./assets/layer-2.png" alt="layer-2">
+    <img class="load-immages" id="layer-3" src="./assets/layer-3.png" alt="layer-3">
+    <img class="load-immages" id="layer-4" src="./assets/layer-4.png" alt="layer-4">
+    <img class="load-immages" id="layer-5" src="./assets/layer-5.png" alt="layer-5">
 </body>
 </html>       
