feat: :sparkles: try add parallax background

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <canvas id="gameScreen"></canvas>
-    <img class="load-immages" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
-    <img class="load-immages" id="player2" src="./assets/char-spritesheet-matita.png" alt="char-spritesheet">
-    <img class="load-immages" id="monster" src="./assets/monster-spritesheet.png" alt="monster-spritesheet">
-    <img class="load-immages" id="layer-1" src="./assets/layer-1.png" alt="layer-1">
-    <img class="load-immages" id="layer-2" src="./assets/layer-2.png" alt="layer-2">
-    <img class="load-immages" id="layer-3" src="./assets/layer-3.png" alt="layer-3">
-    <img class="load-immages" id="layer-4" src="./assets/layer-4.png" alt="layer-4">
-    <img class="load-immages" id="layer-5" src="./assets/layer-5.png" alt="layer-5">
+    <img class="load-images" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
+    <img class="load-images" id="player2" src="./assets/char-spritesheet-matita.png" alt="char-spritesheet">
+    <img class="load-images" id="monster" src="./assets/monster-spritesheet.png" alt="monster-spritesheet">
+    <img class="load-images" id="layer1" src="./assets/layer-1.png" alt="layer-1">
+    <img class="load-images" id="layer2" src="./assets/layer-2.png" alt="layer-2">
+    <img class="load-images" id="layer3" src="./assets/layer-3.png" alt="layer-3">
+    <img class="load-images" id="layer4" src="./assets/layer-4.png" alt="layer-4">
+    <img class="load-images" id="layer5" src="./assets/layer-5.png" alt="layer-5">
+    <img class="load-images" id="layer6" src="./assets/layer6.png" alt="layer-6">
+
 </body>
 </html>       
