--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <img class="load-images" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
     <img class="load-images" id="player2" src="./assets/char-spritesheet-matita.png" alt="char-spritesheet">
     <img class="load-images" id="monster" src="./assets/monster-spritesheet.png" alt="monster-spritesheet">
-    <img class="load-images" id="layer1" src="./assets/layer-1.png" onload="console.log('Layer1 loaded!')" alt="layer-1">
-    <img class="load-images" id="layer2" src="./assets/layer-2.png" onload="console.log('Layer2 loaded!')" alt="layer-2">
-    <img class="load-images" id="layer3" src="./assets/layer-3.png" onload="console.log('Layer3 loaded!')" alt="layer-3">
-    <img class="load-images" id="layer4" src="./assets/layer-4.png" onload="console.log('Layer4 loaded!')" alt="layer-4">
-    <img class="load-images" id="layer5" src="./assets/layer-5.png" onload="console.log('Layer5 loaded!')" alt="layer-5">
+    <img class="load-images" id="layer1" src="./assets/layer-1.png" alt="layer-1">
+    <img class="load-images" id="layer2" src="./assets/layer-2.png" alt="layer-2">
+    <img class="load-images" id="layer3" src="./assets/layer-3.png" alt="layer-3">
+    <img class="load-images" id="layer4" src="./assets/layer-4.png" alt="layer-4">
+    <img class="load-images" id="layer5" src="./assets/layer-5.png" alt="layer-5">
 
 
 </body>
