feat: :sparkles: add clocks bonus and malus and collision detection

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Chased by Time</title>
 </head>
 <body>
+    <!-- <div id="start-screen" class="screen">
+        <button id="start-button" onclick="startGame()">Time to Run!</button>
+    </div> -->
     <canvas id="gameScreen"></canvas>
     <img class="load-images" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
     <img class="load-images" id="player2" src="./assets/char-spritesheet-matita.png" alt="char-spritesheet">
@@ -18,7 +21,7 @@
     <img class="load-images" id="layer3" src="./assets/layer-3.png" alt="layer-3">
     <img class="load-images" id="layer4" src="./assets/layer-4.png" alt="layer-4">
     <img class="load-images" id="layer5" src="./assets/layer-5.png" alt="layer-5">
-
-
+    <img class="load-images" id="clock" src="./assets/clock1.png" alt="clock1">
+    <img class="load-images" id="clock2" src="./assets/images.jpg" alt="clock2">
 </body>
 </html>       
