feat: :sparkles: add sprites to clocks and audio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Silkscreen&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <script src="./JavaScript/main.js" type="module" defer></script>
     <title>Chased by Time</title>
@@ -22,6 +29,8 @@
     <img class="load-images" id="layer4" src="./assets/layer-4.png" alt="layer-4">
     <img class="load-images" id="layer5" src="./assets/layer-5.png" alt="layer-5">
     <img class="load-images" id="clock" src="./assets/clock1.png" alt="clock1">
-    <img class="load-images" id="clock2" src="./assets/images.jpg" alt="clock2">
+    <img class="load-images" id="clock2" src="./assets/clock2.png" alt="clock2">
+    <img class="load-images" id="clock-gold" src="./assets/clockGolden.png" alt="clock1gold">
+    <img class="load-images" id="clock2-gold" src="./assets/clockGolden2.png" alt="clock2gold">
 </body>
-</html>       
+</html>      
