feat: :sparkles: style starting screen

--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
     <title>Chased by Time</title>
 </head>
 <body>
-    <!-- <div id="start-screen" class="screen">
-        <button id="start-button" onclick="startGame()">Time to Run!</button>
-    </div> -->
+    <div class="text">
+        <h1 class="txt-w">CHASED BY TIME</h1>
+        <p class="txt-w">Help Randy Dude to run from the terrible Time Chaser!</p>
+        <p class="txt-w">Take the clocks to drive him away.</p>
+        <p class="txt-w">He will catch you anyway but...how many ages can you survive?</p>
+    </div>
+    <div id="start-screen" class="screen">
+        <button id="start-button" class="button-89" role="button">Time to Run!</button>
+    </div>
+    <div id="gameOver-screen" class="screen">
+        <button id="retry-button">Retry</button>
+    </div>
     <canvas id="gameScreen"></canvas>
     <img class="load-images" id="player" src="./assets/char-spritesheet.png" alt="char-spritesheet">
     <img class="load-images" id="player2" src="./assets/char-spritesheet-matita.png" alt="char-spritesheet">
